feat: Add StringRay ⚡ emoji and update description to emphasize agentic framework, production-ready code, eliminate spaghetti code & AI hallucinations
- Added ⚡ lightning bolt emoji as StringRay brand symbol
- Description: 'Agentic Framework for Production-Ready Code: Eliminate Spaghetti Code & AI Hallucinations Through Intelligent Coordination'
- Emphasizes key value props: production-ready code, agentic coordination, spaghetti code elimination, AI hallucination prevention
- Updated marketing copy to focus on agentic orchestration benefits

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "stringray-framework",
 	"version": "1.0.0",
-	"description": "StringRay (StrRay) - THE DEFINITIVE AI-Assisted Development Framework That ELIMINATES Catastrophic Errors and Guarantees Production-Ready Code",
+	"description": "StringRay (StrRay) - Agentic Framework for Production-Ready Code: Eliminate Spaghetti Code & AI Hallucinations Through Intelligent Coordination",
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
