feat: Transform StringRay into 'The AI Sentinel' brand archetype
- Brand Archetype: The Sentinel/Guardian - protector, vigilant, reliable
- Positioning: Unwavering guardian against AI development catastrophes
- Visual Identity: 🛡️ shield emoji + ⚡ lightning bolt for protection + speed
- Emotional Impact: Makes users feel PROTECTED, SECURE, EMPOWERED, CONFIDENT
- Tone: Authoritative, reassuring, battle-hardened but accessible
- Key Messages: 'Sentinel stands watch', 'Chaos is defeated', 'Production is fortified'
- Tool Positioning: AI orchestration framework that guards production-ready code
- Reader Experience: Confident in reliability, inspired by protection, excited about seamless development

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "stringray-framework",
 	"version": "1.0.0",
-	"description": "StringRay (StrRay) - VERIFIED Agentic Framework: Eliminate Spaghetti Code & AI Hallucinations Through Intelligent Coordination - All Features Implemented",
+	"description": "StringRay (StrRay) - The AI Sentinel: Guardian of Production-Ready Code. Eliminates Spaghetti Code & AI Hallucinations Through Vigilant Multi-Agent Coordination.",
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
