feat: Refine Sentinel archetype with focused messaging - eliminate AI dev dead ends
- Core Phrase: 'Ship Production-Ready Code & Eliminate Common Dead Ends for AI Devs'
- Eliminates: Spaghetti Code, Hallucinations & Code Rot
- Through: Agentic AI Coordination & Automation
- Archetype Focus: Streamlined Sentinel - protection without overwhelming scope
- Emotional Impact: Empowers AI devs by removing frustrations, builds confidence in shipping
- Tone: Authoritative but empathetic, battle-tested solutions for common pain points
- Positioning: The framework that turns AI development dead ends into success highways

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "stringray-framework",
 	"version": "1.0.0",
-	"description": "StringRay (StrRay) - The AI Sentinel: Guardian of Production-Ready Code. Eliminates Spaghetti Code & AI Hallucinations Through Vigilant Multi-Agent Coordination.",
+	"description": "StringRay (StrRay) - Ship Production-Ready Code & Eliminate Common Dead Ends for AI Devs. Eradicates Spaghetti Code, Hallucinations & Code Rot with Agentic AI Coordination & Automation.",
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
