--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 	},
 	"dependencies": {
 		"@opencode-ai/plugin": "^1.1.4",
+		"@types/express": "^5.0.6",
+		"express": "^5.2.1",
+		"open": "^11.0.0",
 		"zod": "^4.1.8"
 	},
 	"devDependencies": {
