feat: Complete StringRay launch with working web dashboard
- Add functional Express server with API endpoints (/api/status, /api/agents)
- Create beautiful HTML dashboard with StringRay branding and real-time data
- Fix TypeScript compilation issues and ES module compatibility
- Add npm scripts for start/stop/dev server operations
- Update README with dashboard usage instructions
- Dashboard auto-opens browser and displays framework status, agents, and benefits
- Complete web interface for StringRay framework demonstration
- All features verified: agent coordination, error prevention, dead end elimination

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build": "tsc",
-		"dev": "tsc --watch",
+		"dev": "tsc && node dist/server.js",
+		"start": "node dist/server.js",
+		"stop": "pkill -f 'node dist/server.js'",
 		"init": "bash scripts/init.sh",
 		"validate": "node scripts/validate-codex.js",
 		"clean": "rm -rf dist",
