feat: Update all processors to enforce verification rules with zero tolerance
- Updated all 6 processor commands with blocking violation lists
- Added verification enforcement to pre-commit-introspection, framework-compliance-audit, sisyphus-validation, security-scan, auto-format, enforcer-daily-scan, post-deployment-audit
- Enhanced enforcer-config.json with verification requirements
- All processors now block commits/changes that violate quality standards
- Zero tolerance policy enforced across all automation hooks

--- a/config/enforcer-config.json
+++ b/config/enforcer-config.json
@@ -51,6 +51,15 @@
 				"security": ["security-scan"],
 				"deployment": ["post-deployment-audit"]
 			},
+			"verification": {
+				"buildRequired": true,
+				"testsRequired": true,
+				"coverageRequired": 0.85,
+				"consoleLogBlocked": true,
+				"todoCommentsBlocked": true,
+				"serverStartupRequired": true,
+				"apiResponseRequired": true
+			},
 			"workflows": {
 				"ci": ["lint", "typecheck", "test", "security-scan"],
 				"cd": ["build", "post-deployment-audit"],
