--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,10 @@
     "dist",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/__tests__/**/*"
+    "src/__tests__/**/*",
+    "src/cross-language-bridge.ts",
+    "src/dashboards/**/*",
+    "src/distributed/**/*",
+    "src/streaming/**/*"
   ]
 }
