--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:security": "vitest run --config test-config/vitest.security.config.ts",
     "test:performance": "node tests/performance/load-test.js",
     "test:smart": "node scripts/test-utils/smart-test-runner.mjs",
+    "test:auto-heal": "node scripts/test-utils/smart-test-runner.mjs --auto-heal",
     "test:quarantine": "node scripts/test-utils/test-quarantine.mjs",
     "test:quarantine:list": "node scripts/test-utils/test-quarantine.mjs list",
     "test:quarantine:stats": "node scripts/test-utils/test-quarantine.mjs stats",
