--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,22 +31,14 @@ jobs:
     - name: Lint code
       run: npm run lint
 
-    - name: Run unit tests
-      run: npm run test:unit
-
-    - name: Run integration tests
-      run: npm run test:integration
+    - name: Run tests
+      run: npm test
 
     - name: Run security audit
-      run: npm run security-check
+      run: npm run security-audit
 
-    - name: Generate coverage report
-      run: npm run test:coverage
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage/lcov.info
+    - name: Run tests with coverage
+      run: npm test
 
   build:
     needs: test
