🚀 Add CI/CD Pipeline Monitoring & Health Tracking
✅ GitHub Actions CI/CD Monitoring System:
• Added GitHub Actions workflow monitor (scripts/github-actions-monitor.cjs)
• Created CI/CD health monitoring workflow (.github/workflows/ci-cd-monitor.yml)
• Integrated monitoring into main CI/CD pipeline
• Added npm scripts: ci-monitor, ci-report

✅ Local & Remote CI/CD Status Tracking:
• Monitors workflow runs and health scores
• Generates detailed reports and recommendations
• Works locally without GitHub API access
• Provides actionable insights for pipeline optimization

✅ Enterprise CI/CD Health Dashboard:
• Real-time pipeline status monitoring
• Automated health score calculation
• Failure detection and alerting
• Integration with StrRay monitoring ecosystem

🎯 CI/CD Pipelines Now Self-Monitoring:
• Pipelines check their own health
• Automated failure detection and reporting
• Recommendations for optimization
• Full integration with enterprise monitoring

📊 Monitoring Capabilities:
• Workflow success/failure tracking
• Health score calculation (0-100%)
• Automated recommendations
• Integration with GitHub Actions ecosystem

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,6 +62,12 @@ jobs:
     - name: Run build validation
       run: npm run validate
 
+    - name: CI/CD Health Check
+      run: npm run ci-report
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_REPOSITORY: ${{ github.repository }}
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
