✨ Add ASCII art display functionality to StrRay plugin
- Add framework:init script to package.json for manual ASCII art display
- Update StrRay plugin to display ASCII art on chat system transform
- Clean up oh-my-opencode.json configuration
- Verified plugin deployment works with npm and shell scripts
- All tests passing, deployment examples validated

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix"
+    "lint:fix": "eslint src --ext .ts --fix",
+    "framework:init": "bash .opencode/init.sh"
   },
   "keywords": [
     "ai",
