🧹 Fix ESLint errors for CI/CD pipeline success
- Fix async Promise executor in framework-reporting-system.ts
- Fix hasOwnProperty usage in security-middleware.ts
- Update lint scripts to use modern ESLint format
- Resolve all linting violations for clean CI/CD pipeline

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "ci-report": "node scripts/github-actions-monitor.cjs --report",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "framework:init": "bash .opencode/init.sh"
   },
   "keywords": [
